Добвлена логика по работе с документами, фильтрами и фото компаний